...
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_person_pin_black_24dp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/UsernameHint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
...
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_lock_outline_black_24dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/PasswordHint"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
...
                android:buttonTint="@android:color/white"
                android:gravity="center"
                android:text="@string/rememberMe"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@color/darkblue"
                android:onClick="login"
                android:text="@string/LoginButton"
...
