...
                    android:id="@+id/statsIcon"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_assessment_pink_a700_48dp" />

                <TextView
                    android:id="@+id/statsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingTop="12dp"
                    android:text="@string/statistics"
                    android:textColor="@color/design_default_color_primary"
...
                    android:id="@+id/switchAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_supervisor_account_cyan_a700_48dp" />

                <TextView
                    android:id="@+id/switchAccText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingTop="12dp"
                    android:text="@string/switchAccText"
                    android:textColor="@color/design_default_color_primary"
...
