<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout android:id="@+id/journey_browser_swipe_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.JourneyBrowserFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="83dp"
                    android:layout_height="51dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:src="@drawable/ic_search_blue_grey_300_18dp" />

                <EditText
                    android:id="@+id/searchStartlocation"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/searchStart"
                    android:inputType="textPersonName"
                    android:paddingLeft="15dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/searchText"
                    android:layout_width="181dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/searchStop"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="401dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation='horizontal'>

                        <RadioButton
                            android:id="@+id/sortByPrice"
                            android:layout_width="230dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:checked="true"
                            android:drawableLeft="@drawable/ic_arrow_drop_up_black_18dp"
                            android:text="@string/sortbyPrice"
                            android:buttonTint="@color/darkblue"
                            android:textColor="@android:color/darker_gray"
                            android:textColorLink="@color/colorAccent"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/SortByCarModel"
                            android:layout_width="247dp"
                            android:buttonTint="@color/darkblue"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:drawableLeft="@drawable/ic_arrow_drop_up_black_18dp"
                            android:text="@string/sortByCarModel"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="18sp"
                            android:textStyle="normal|bold" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/darkblue" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvAdvertisements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.SwipeRefreshLayout>
